client:feat:Fixes overflow for modals

--- a/client/src/components/footer/Footer.module.scss
+++ b/client/src/components/footer/Footer.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   width: 100%;
   background-color: $black;
-  z-index: 100000;
+  z-index: 1000;
 
   & a:hover {
     color: $accent-a-3;
